--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@types/mockjs": "^1.0.7",
     "@vueuse/core": "^10.1.2",
     "axios": "^1.4.0",
-    "dayjs": "^1.11.8",
+    "dayjs": "^1.11.9",
     "echarts": "^5.4.2",
     "jsencrypt": "^3.3.2",
     "lodash": "^4.17.21",
@@ -31,7 +31,8 @@
     "typescript": "^5.1.3",
     "vue": "^3.3.4",
     "vue-echarts": "^6.5.5",
-    "vue-router": "4"
+    "vue-router": "4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
