--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@stomp/stompjs": "^7.0.0",
     "@types/mockjs": "^1.0.7",
     "@vueuse/core": "^10.4.1",
+    "animate.css": "^4.1.1",
     "axios": "^1.5.0",
     "dayjs": "^1.11.10",
     "echarts": "^5.4.2",
