--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite --config ./config/vite.config.dev.ts",
+    "test": "vite --config ./config/vite.config.test.ts",
     "build": "vite build --config ./config/vite.config.prod.ts",
     "build:strict": "vue-tsc --noEmit --skipLibCheck && vite build --config ./config/vite.config.prod.ts",
     "lint-staged": "npx lint-staged",
